--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,7 +22,7 @@ jobs:
           go-version: 'stable'
 
       - name: Build
-        working-directory: ./homework
+        working-directory: ./intership_vk_backend_2024
         run: |
           go mod tidy
           go build -v ./...
@@ -31,10 +31,10 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
-          working-directory: ./homework
+          working-directory: ./intership_vk_backend_2024
 
       - name: Test
-        working-directory: ./homework
+        working-directory: ./intership_vk_backend_2024
         run: |
           go mod tidy
           go test -v -race -coverpkg=./... ./...
