--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,11 +7,11 @@ on:
     branches: [ "master", "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -24,6 +21,7 @@ jobs:
       - name: Build
         working-directory: ./intership_vk_backend_2024
         run: |
+          cd intership_vk_backend_2024
           go mod tidy
           go build -v ./...
 
@@ -36,5 +34,6 @@ jobs:
       - name: Test
         working-directory: ./intership_vk_backend_2024
         run: |
+          cd intership_vk_backend_2024
           go mod tidy
           go test -v -race -coverpkg=./... ./...
